Version 3.9.14
- Fixed a bug where function parameters to Spin functions without type
specifiers could be coerced to the wrong type
- Improved C compatibility of various register declarations

Version 3.9.13
- Fixed runtime to get P2 code running on P2 EVAL boards
- Added _setbaud function to change baud rate
- Allow coginit/cognew of function pointers and functions from other
  objects.
- Fixed the BASIC HEAPSIZE constant.
- Implemented "option base" for BASIC, and made "option base 0" the default
- Added "struct __using" and "__fromfile" to C
- Fixed an optimizer bug which affected some FullDuplexSerialversions
- Fixed a preprocessor bug where defines starting with _ were not expanded
- Fixed "dim shared" syntax to match other dim syntaxes
- Reserved DATA, READ, RESTORE keywords in BASIC
- Fixed some P2 optimization bugs

Version 3.9.12
- Fixed a BASIC operator precedence problem (<< and >> should have
  been like * and /)
- Allowed plain EXIT and CONTINUE in BASIC
- Added varargs to C
- Implemented switch in C
- Implemented enums in C
- Implemented static variables in C
- Added inline assembly to C
- Began implementation of structs in C

Version 3.9.11
- Added tail call optimization
- Added simple optimization based on commutative math
- Optimize for loops counting down to 0
- Implemented case sensitivity for C, and an optional -C flag
  to force case sensitivity in other languages
- Fixed a number of type parsing problems in C
- Added a new preprocessor (mcpp) for C
- Report an error if ORGH tries to go backwards
- Added support for more kinds of operands in inline assembly
- Added -D__FLEXSPIN__, -D__FLEXBASIC__, and -D__FLEXC__ defines for
  future compatibility (someday this tool will be renamed).
- Look in {argv[0]}/../include for include files by default

Version 3.9.10
- Added a peephole optimizer to replace "mov x, #0 ; add x, y" with
  "mov x, y"
- Added sqrt() operator to BASIC